--- a/css/UserList.module.css
+++ b/css/UserList.module.css
@@ -195,3 +195,31 @@ body {
     margin-top: 25px;
     padding: 0 15px;
 }
+.logout-button {
+    background-color: #dc3545;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    font-size: 1em;
+    text-decoration: none;
+    display: inline-block;
+    text-align: center;
+    margin-left: 95%;
+    margin-bottom: 10px;
+    padding: 3px;
+}
+.loginguest-button {
+    background-color: #28a745;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    font-size: 1em;
+    text-decoration: none;
+    display: inline-block;
+    text-align: center;
+    margin-left: 95%;
+    margin-bottom: 10px;
+    padding: 3px;
+}
